Sanitization, Class Extends, various other things.

--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -5,9 +5,9 @@
 
 	<body>
 		<h1>Login Form</h1>
-		<form method="POST">
+		<form method="POST" action="{submit_url}">
 			Username: <input type="text" name="username"><br />
-			Password: <input type="text" name="password"><br />
+			Password: <input type="password" name="password"><br />
 			<input type="submit" name="submit" value="Submit">
 		</form>
 	</body>
