--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -5,9 +5,9 @@
 
 	<body>
 		<h1>Signup Form</h1>
-		<form method="POST">
+		<form method="POST" action="{submit_url}">
 			New Username: <input type="text" name="username"><br />
-			New Password: <input type="text" name="password"><br />
+			New Password: <input type="password" name="password"><br />
 			<input type="submit" name="submit" value="Submit">
 		</form>
 	</body>
