Added external stylesheet file functionality

--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -1,1 +1,17 @@
-This is a homepage
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+	<head>
+		
+		<link href="/css/style.css" rel="stylesheet" type="text/css">
+		<title>Homepage!</title>
+	</head>
+
+	<body>
+		<div class="big_div">&nbsp;
+		<div class="small_div"> </div>
+		
+		</div>
+
+	</body>
+</html>
