--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -8,9 +8,18 @@
 	</head>
 
 	<body>
-		<div class="big_div">&nbsp;
-		<div class="small_div"> </div>
+		<div class="navbar" style="position:absolute;top:0px;width:800px;height:20px;background-color:black;display:block;"></div>
+		<div class="container" style="position:absolute;top:20px;width:800px;background-color:blue;height:auto;display:block;">
+			<div class="header" style="position:absolute;top:0px;left:0px;display:block;background-color:#008000;height:80px;width:800px;">&nbsp;</div>
+
+			<div class="login_box" style="position:absolute;top:5px;left:665px;width:130px;height:70px;background-color:red;display:block;z-index:4;"> </div>
+
+			<div class="left_choice" style="position:absolute;top:80px;left:0px;height:400px;width:400px;background-color:#aaaaaa;"></div>
+
+			<div class="right_choice" style="position:absolute;top:80px;left:400px;height:400px;width:400px;background-color:#333333;"></div>
 		
+		<div class="bottom_nav" style="position:absolute;top:480px;width:800px;height:20px;background-color:black;display:block;"></div>
+		<div class="copyright" style="position:absolute;top:500px;width:800px;height:20px;background-color:#333333;display:block;"></div>
 		</div>
 
 	</body>
