Done working on CSS, Layout for today.

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -72,6 +72,7 @@ html,body {
 	top:500px;
 	width:800px;
 	height:20px;
-	background-color:#333333;
+	background-color:white;
 	display:block;
+	text-align:center;	
 }
