--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<div class="navbar"></div>
+		<div class="navbar">{navbar}</div>
 		<div class="container">
 			<div class="header"></div>
 
@@ -19,7 +19,7 @@
 			<div class="right_choice"></div>
 		
 		<div class="bottom_nav"></div>
-		<div class="copyright">Copyright &copy; 2013 Carl Herold. All Rights Reserved.</div>
+		<div class="copyright">{copyright}</div>
 		</div>
 
 	</body>
