Working on dynamic xml like handling

--- a/templates/pages/homepage.html
+++ b/templates/pages/homepage.html
@@ -8,19 +8,6 @@
 	</head>
 
 	<body>
-		<div class="navbar">{navbar}</div>
-		<div class="container">
-			<div class="header"></div>
-
-			<div class="login_box"> </div>
-
-			<div class="left_choice"></div>
-
-			<div class="right_choice"></div>
-		
-		<div class="bottom_nav"></div>
-		<div class="copyright">{copyright}</div>
-		</div>
-
+		{homepage_content}
 	</body>
 </html>
