Getting ready to cause div tag to use dynamic placeholder

--- a/templates/divcontent/homepage_content.html
+++ b/templates/divcontent/homepage_content.html
@@ -1,3 +1,5 @@
+
+		<!-- templates/divcontent/homepage_content.html -->
 		<div class="navbar">{navbar}</div>
 		<div class="container">
 			<div class="header"></div>
