--- a/templates/divcontent/homepage_content.html
+++ b/templates/divcontent/homepage_content.html
@@ -1,11 +1,4 @@
 
 		<!-- templates/divcontent/homepage_content.html -->
 		<div class="navbar">{navbar}</div>
-		<div class="container">
-			<div class="header"></div>
-			<div class="login_box"> </div>
-			<div class="left_choice"></div>
-			<div class="right_choice"></div>
-			<div class="bottom_nav"></div>
-			<div class="copyright">{copyright}</div>
-		</div>
+		{main_container}
